Fixed bug of bid comment not showing as currency

--- a/buy/templates/buy/index.html
+++ b/buy/templates/buy/index.html
@@ -32,7 +32,7 @@
                             <div class="text-center">
                                 <!-- Product name -->
                                 <h5 class="fw-bolder">{{ listing.title }}</h5>
-                                <p>Time left: {{ listing.bid_timer }}</p>
+                                <p>Starting Price: €{{ listing.price }}</p>
                             </div>
                         </div>
                     </div>
