--- a/templates/base.html
+++ b/templates/base.html
@@ -32,26 +32,26 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="{% url 'home' %}">WBC - Watch Bid Central</a>
+            <a class="navbar-brand" href="{% url 'buy:home' %}">WBC - Watch Bid Central</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link {% if request.path == '/' %}active{% endif %}"
-                            aria-current="page" href="{% url 'home' %}">Home</a></li>
+                            aria-current="page" href="{% url 'buy:home' %}">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             {% if user.is_authenticated %}<!-- "and user.is_verified" add when verfied added  -->
-                            <li><a class="nav-link" href="{% url 'create-listing' %}">Create Listing</a>
+                            <li><a class="nav-link" href="{% url 'sell:create-listing' %}">Create Listing</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
                             {% endif %}
-                            <li><a class="dropdown-item" href="{% url 'my-listings' %}">My Listings</a></li>
+                            <li><a class="dropdown-item" href="{% url 'sell:my-listings' %}">My Listings</a></li>
                             <li><a class="dropdown-item" href="#!">Most Liked Listings</a></li>
                         </ul>
                     </li>
