--- a/sell/templates/sell/my_listings.html
+++ b/sell/templates/sell/my_listings.html
@@ -13,7 +13,7 @@
             <div class="card h-100">
                 <!-- Likes Button-->
                 <button id="like-button-{{ listing.id }}" class="like-btn btn btn-dark position-absolute"
-                    data-listing-id="{{ listing.id }}" style="top: 0.5rem; right: 0.5rem">
+                    data-listing-id="{{ listing.id }}">
                     <i class="bi bi-heart"></i> <span id="likes-count-{{ listing.id }}">{{ listing.likes }}</span>
                 </button>
                 <!-- Product image-->
