--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
     <!-- Footer-->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+            <p class="m-0 text-center text-white">Code Institute Project 2024</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
