--- a/buy/templates/buy/watch_filters.html
+++ b/buy/templates/buy/watch_filters.html
@@ -41,7 +41,7 @@
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="text-center">
-                        <a class="btn btn-outline-dark mt-auto" href="{% url 'watch_detail' listing.slug %}">View Listing</a>
+                        <a class="btn btn-outline-dark mt-auto" href="{% url 'buy:watch_detail' listing.slug %}">View Listing</a>
                     </div>
                 </div>
             </div>
