--- a/sell/templates/sell/my_listings.html
+++ b/sell/templates/sell/my_listings.html
@@ -42,7 +42,7 @@
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="text-center">
-                        <a class="btn btn-outline-dark mt-auto" href="{% url 'watch_detail' listing.slug %}">View
+                        <a class="btn btn-outline-dark mt-auto" href="{% url 'buy:watch_detail' listing.slug %}">View
                             Listing</a>
                     </div>
                 </div>
