Finished flatpage about

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                     </li>
                     <!-- Added About Page with Dynamic Active Class -->
                     <li class="nav-item"><a class="nav-link {% if request.path == '/about-us/' %}active{% endif %}"
-                            href="">About Us</a></li>
+                            href="/about/">About Us</a></li>
 
                     <!-- Authentication Links -->
                     <!-- Right-aligned items for showing logged-in user's name -->
