--- a/templates/flatpages/about.html
+++ b/templates/flatpages/about.html
@@ -3,18 +3,10 @@
 {% block title %}About Us{% endblock %}
 
 {% block content %}
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About Us</h1>
-
-    <!-- Intro Content -->
-    <div class="row">
-        <div class="col-lg-6">
-            <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
-        </div>
-        <div class="col-lg-6">
-            <h2>About Our Company</h2>
+    <div class="container px-4 px-lg-5 mt-5">
+        <h2>About Us</h2>  
+        <div class="mb-3">
             <p>{{ flatpage.content }}</p>
         </div>
     </div>
-    <!-- /.row -->
 {% endblock %}
